--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -53,14 +53,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Plugins\fpnn\CallbackData.cs" />
-     <Compile Include="Assets\Plugins\fpnn\ErrorRecorder.cs" />
-     <Compile Include="Assets\Plugins\fpnn\FPCallback.cs" />
+     <Compile Include="Assets\Plugins\fpnn\callback\CallbackData.cs" />
+     <Compile Include="Assets\Plugins\fpnn\callback\FPCallback.cs" />
+     <Compile Include="Assets\Plugins\fpnn\event\EventData.cs" />
+     <Compile Include="Assets\Plugins\fpnn\event\FPEvent.cs" />
      <Compile Include="Assets\Plugins\fpnn\FPClient.cs" />
-     <Compile Include="Assets\Plugins\fpnn\FPCommon.cs" />
+     <Compile Include="Assets\Plugins\fpnn\FPConfig.cs" />
      <Compile Include="Assets\Plugins\fpnn\FPData.cs" />
+     <Compile Include="Assets\Plugins\fpnn\FPEncryptor.cs" />
+     <Compile Include="Assets\Plugins\fpnn\FPPackage.cs" />
      <Compile Include="Assets\Plugins\fpnn\FPProcessor.cs" />
      <Compile Include="Assets\Plugins\fpnn\FPSocket.cs" />
+     <Compile Include="Assets\Plugins\fpnn\ThreadPool.cs" />
      <Compile Include="Assets\Plugins\GameDevWare.Serialization\GenerateTypeSerializerAttribute.cs" />
      <Compile Include="Assets\Plugins\GameDevWare.Serialization\IJsonReader.cs" />
      <Compile Include="Assets\Plugins\GameDevWare.Serialization\IJsonWriter.cs" />
