--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Main.cs" />
+     <Compile Include="Assets\Scripts\SingleClientPush.cs" />
+     <Compile Include="Assets\Scripts\SingleClientSend.cs" />
      <Compile Include="Assets\Scripts\TestCase.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/Users/dixun/Documents/repo/infra-fpnn-rtm-client-sdk/Unity/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
