--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Main.cs" />
+     <Compile Include="Assets\Scripts\SingleClientConcurrency.cs" />
      <Compile Include="Assets\Scripts\SingleClientPush.cs" />
      <Compile Include="Assets\Scripts\SingleClientSend.cs" />
      <Compile Include="Assets\Scripts\TestCase.cs" />
