--- a/Tests.csproj
+++ b/Tests.csproj
@@ -140,6 +140,10 @@
      <Compile Include="Assets\Scripts\Tests\GameDevWare.Serialization\Serializers\VersionSerializer.cs" />
      <Compile Include="Assets\Scripts\Tests\GameDevWare.Serialization\TypeSerializer.cs" />
      <Compile Include="Assets\Scripts\Tests\GameDevWare.Serialization\TypeSerializerAttribute.cs" />
+     <Compile Include="Assets\Scripts\Tests\rtm\platform\RTMAdpcm.cs" />
+     <Compile Include="Assets\Scripts\Tests\rtm\platform\RTMAudioManager.cs" />
+     <Compile Include="Assets\Scripts\Tests\rtm\platform\RTMMicrophone.cs" />
+     <Compile Include="Assets\Scripts\Tests\rtm\platform\Singleton.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\RTMClient.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\RTMConfig.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\RTMProcessor.cs" />
