--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -140,6 +140,8 @@
      <Compile Include="Assets\Plugins\GameDevWare.Serialization\Serializers\VersionSerializer.cs" />
      <Compile Include="Assets\Plugins\GameDevWare.Serialization\TypeSerializer.cs" />
      <Compile Include="Assets\Plugins\GameDevWare.Serialization\TypeSerializerAttribute.cs" />
+     <Compile Include="Assets\Plugins\rtm\msgpack\MsgPackFix.cs" />
+     <Compile Include="Assets\Plugins\rtm\msgpack\MsgPackFixReader.cs" />
      <Compile Include="Assets\Plugins\rtm\platform\RTMAdpcm.cs" />
      <Compile Include="Assets\Plugins\rtm\platform\RTMAudioManager.cs" />
      <Compile Include="Assets\Plugins\rtm\platform\RTMMicrophone.cs" />
