--- a/Tests.csproj
+++ b/Tests.csproj
@@ -142,6 +142,7 @@
      <Compile Include="Assets\Scripts\Tests\GameDevWare.Serialization\TypeSerializerAttribute.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\msgpack\MsgPackFix.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\msgpack\MsgPackFixReader.cs" />
+     <Compile Include="Assets\Scripts\Tests\rtm\msgpack\MsgPackFixWriter.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\platform\RTMAdpcm.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\platform\RTMAudioManager.cs" />
      <Compile Include="Assets\Scripts\Tests\rtm\platform\RTMMicrophone.cs" />
